<resources>
    <string name="app_name">Diego\'s House</string>
    <string name="correo_usuario">Correo electronico</string>
    <string name="password_usuario">Contraseña</string>
    <string name="passwordconfirmar_usuario">Confirmar contraseña</string>
    <string name="telefono_usuario">Telefono</string>
    <string name="Nombre">Telefono</string>
    <string name="logo_img">logo_img</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresa_tu_informacion_para_acceder">ingresa tu informacion para acceder</string>
    <string name="olvido_su_contrase_a">¿Olvido su contraseña?</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="o_iniciar_con">O iniciar con</string>
    <string name="icono_gmail">icono_gmail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="crear_una_cuenta">ingresa tu informacion para crear una cuenta</string>
    <string name="crear_cuenta_titulo">Crear Cuenta</string>
    <string name="tablogin">tablogin</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="default_web_client_id">34393580375-3c16esabbpvlqkf0mml49ei6iqpjj5vn.apps.googleusercontent.com</string>
    <string name="completa_la_informacion">COMPLETA  TU INFORMACION</string>
    <string name="cargando">Cargando ....</string>
    <string name="recuperar_cuenta">RECUPERAR CUENTA</string>
    <string name="escribe_tu_direccion">Escribe la dirección de correo electrónico asociada a tu cuenta.</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="mapa">Mapa</string>
    <string name="inicio">Inicio</string>
    <string name="pedidos">Pedidos</string>
    <string name="perfil">Perfil</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="titulo_promocion">PROMOCIONES</string>
    <string name="promociones">Promociones</string>
    <string name="menu">MENU</string>
    <string name="recomendaciones">RECOMENDACIONES</string>
    <string name="precio_formato">$%s </string>
    <string name="precio_no_disponible">No disponible </string>
    <string name="tu_carrito_est_vac_o">Tu carrito está vacío</string>
    <string name="carrito">Carrito</string>
    <string name="precio_total">Precio Total</string>
    <string name="puntos">Puntos</string>
    <string name="proceder_al_pago">Proceder al pago</string>
    <string name="no_hay_pedidos_recientes">No hay pedidos recientes</string>
    <string name="historial_de_pedidos">Ultimos Pedidos</string>
    <string name="correo_del_usuario">Correo del usuario</string>
    <string name="ayuda">Ayuda</string>
    <string name="aviso_de_privacidad">Aviso de privacidad</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="cerrar_sesi_n">cerrar sesión</string>
    <string name="no_hay_pedidos_pendientes">No hay pedidos pendientes</string>
    <string name="pizzas">Pizzas</string>
    <string name="mortazas">Mortazzas</string>
    <string name="bebidas">Bebidas</string>
    <string name="ic_promociones">ic_promociones</string>
    <string name="ic_bebidas">ic_bebidas</string>
    <string name="ic_pizzas">ic_pizzas</string>
    <string name="ic_mortazas">ic_mortazzas</string>
    <string name="login_with_gmail">Iniciar sesión con Gmail</string>
    <string name="resultados_pizzas">Resultados: Pizzas</string>
    <string name="resultados_mortaza">Resultados: Mortaza</string>
    <string name="resultados_bebidas">Resultados: Bebidas</string>
    <string name="resultados_promociones">Resultados: Promociones</string>
    <string name="resultados_generico">Resultados: %1$s</string>
    <string name="ic_ayuda">ic_ayuda</string>
    <string name="ic_flecha">ic_flecha</string>
    <string name="ic_puntos">ic_puntos</string>
    <string name="ic_pedidos">ic_pedidos</string>
    <string name="ic_aviso_de_privacidad">ic_aviso de privacidad</string>
    <string name="ic_terminos_y_condicioens">ic_terminos y condicioens</string>
    <string name="ic_receipt">ic_receipt</string>
    <string name="codigo_pedido">Codigo Pedido</string>
    <string name="ic_codigoqr">ic_codigoqr</string>
    <string name="ic_carrito">ic_carrito</string>
    <string name="ic_logo">ic_logo</string>
    <string name="bg_color">bg_color</string>
    <string name="img_producto">img_producto</string>
    <string name="ic_btn">ic_btn</string>
    <string name="img_back">img_back</string>
    <string name="titulo">Titulo</string>
    <string name="ic_estrella">ic_estrella</string>
    <string name="_0_0">0.0</string>
    <string name="precio">$-</string>
    <string name="description">Description</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="_1">1</string>
    <string name="opiniones_del_producto">Opiniones del producto</string>
    <string name="ver_m_s_comentarios">Ver más comentarios</string>
    <string name="deja_tu_comentario">Deja tu comentario</string>
    <string name="comparte_detalles_sobre_tu_experiencia_en_este_lugar">Comparte detalles sobre tu experiencia en este lugar</string>
    <string name="usuario_desconocido">Usuario desconocido</string>
    <string name="enviar_comentario">Enviar Comentario</string>
    <string name="deja_un_comentario_sobre_el_producto">Deja un comentario sobre el producto</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="comentarios_de_los_usuarios">Comentarios de los usuarios</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="notificacion">Notificacion</string>
    <string name="no_hay_comentarios">Sin calificaciones</string>
    <string name="calificacion_texto">%.1f de 5</string>
    <string name="_0_comentarios">0 comentarios</string>
    <string name="total_comments">"%1$d Calificaciones"</string>
    <string name="aun_no_hay_comentarios">Aún no hay comentarios</string>
    <string name="ic_comentarios">ic_comentarios</string>
    <string name="image_zoomed">image_zoomed</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="no_hay_puntos">Puntos: N/A</string>
    <string name="cero_puntos">0</string>
    <string name="bot_n_de_instagram">Instagram</string>
    <string name="bot_n_de_x">twitter</string>
    <string name="bot_n_de_facebook">facebook</string>
    <string name="redes_sociales">redes sociales</string>
    <string name="escr_benos">escribenos</string>
    <string name="ic_email">ic_email</string>
    <string name="ll_manos">Llamanos</string>
    <string name="ic_telefono">ic_telefono</string>
    <string name="contacto">Contacto</string>
    <string name="puntos_usados">Puntos Usados</string>
    <string name="puntos_ganados">Puntos ganados</string>
    <string name="precio_">Precio:</string>
    <string name="estado_del_pedido">Estado del pedido:</string>
    <string name="pedido">Pedido</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="realizar_pago">Realizar Pago</string>
    <string name="cvv">CVV</string>
    <string name="mm_aa">MM/AA</string>
    <string name="nombre_del_titular">Nombre del titular</string>
    <string name="informaci_n_de_pago">Información de Pago</string>
    <string name="total_a_pagar_100_00">Total a pagar: $100.00</string>
    <string name="canjear_puntos">Canjear Puntos</string>
    <string name="sigue_acumulando_puntos_para_m_s_recompensas">¡Sigue acumulando puntos para más recompensas!</string>
    <string name="puntos_acumulados">Puntos acumulados</string>
    <string name="tus_puntos">¡Tus Puntos!</string>
    <string name="_1200">1200</string>
    <string name="Canjea_tus_puntos">Por cada pizza comprada ganas 1 punto.\nCanjea tus puntos en la sección de promociones.</string>
    <string name="aqu_se_mostrar_el_contenido_expandible_con_m_s_informaci_n_sobre_la_pregunta_frecuente">Aquí se mostrará el contenido expandible con más información sobre la pregunta frecuente.</string>
    <string name="no_se_encontraron_resultados">No se encontraron resultados</string>
    <string name="fecha_de_pedido">Fecha de pedido</string>
    <string name="estatus">Estatus</string>
    <string name="total">Total</string>
    <string name="id_producto">ID Producto</string>
    <string name="tiempo_estimado">Tiempo estimado:</string>
    <string name="ic_timer">Icono de reloj</string>
    <string name="_00_00">00:00</string>

</resources>