<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_light"
    tools:context=".fragments.HomeFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_contenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- Aquí va el RecyclerView de banners -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="25sp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <!-- Aquí va el HorizontalScrollView para los botones -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="horizontal">
                <!-- Botones dentro del HorizontalScrollView -->

                <LinearLayout
                    android:id="@+id/btn_pizza"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:contentDescription="@string/ic_pizzas"
                        android:src="@drawable/pizza"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pizzas"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_mortaza"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:contentDescription="@string/ic_mortazas"
                        android:src="@drawable/ic_mortazza"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mortazas"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_bebidas"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:contentDescription="@string/ic_bebidas"
                        android:src="@drawable/soda"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bebidas"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_promociones"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ic_promociones"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:contentDescription="@string/ic_promociones"
                        android:src="@drawable/promocion"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/promociones"/>
                </LinearLayout>


            </LinearLayout>
        </HorizontalScrollView>

        <!-- Título de recomendaciones -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recomendaciones"
            android:textSize="25sp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <!-- Aquí va el RecyclerView de recomendaciones, que ahora se desplazará con el NestedScrollView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_recomendacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingBottom="5dp"/>

    </LinearLayout>
</FrameLayout>
