<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_carrito"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_producto"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/txt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_producto"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/txt_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_Fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_pedido"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_estatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estatus"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
