<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.LoginTabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresa_tu_informacion_para_acceder"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_usuario"
                android:textAlignment="center"
                app:startIconDrawable="@drawable/ic_email"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_correo"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_usuario"
                android:textAlignment="center"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="false"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextInputEditTextStyle"
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/recuperar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olvido_su_contrase_a"
                android:textStyle="bold"
                android:layout_gravity="end"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                app:cornerRadius="20dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_iniciar_con"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/login_gmail"
                    android:background="@drawable/ic_gmail"
                    android:contentDescription="@string/login_with_gmail"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>