<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_light"
    tools:context=".activities.PuntosActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarPuntos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/white"
            app:title="Tus Puntos"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tus_puntos"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/topAppBarPuntos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="20dp" />

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/ic_puntos"
        android:src="@drawable/ic_point"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/Amarillo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntos_acumulados"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:gravity="center" />

            <TextView
                android:id="@+id/txt_Points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1200"
                android:textSize="48sp"
                android:textColor="@color/light_green"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tvPointsHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigue_acumulando_puntos_para_m_s_recompensas"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_canjear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/canjear_puntos"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/cardPoints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="32dp"/>

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Canjea_tus_puntos"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
