<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activities.SingupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_cuenta_titulo"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_una_cuenta"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textAlignment="center"
                app:startIconDrawable="@drawable/ic_person"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/singup_name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono_usuario"
                android:textAlignment="center"
                app:startIconDrawable="@drawable/ic_phone"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/singup_phone"
                    android:inputType="phone"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_usuario"
                android:textAlignment="center"
                app:startIconDrawable="@drawable/ic_email"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/singup_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_usuario"
                android:textAlignment="center"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="false"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/singup_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar_contrase_a"
                android:textAlignment="center"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="false"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/singup_passwordconfir"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/iniciar_sesion"
                android:id="@+id/singup_btnsingup"
                android:textColor="@color/white"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>